# raytracer-weekend

./: .gitignore  Cargo.toml  README  bench.md  flake.nix
.cargo/: config.toml
src/: aabb.rs  bvh.rs  camera.rs  canvas.rs  color.rs  common.rs  hittable.rs  main.rs  material.rs  ppm.rs  ray.rs  vector.rs
src/shapes/: sphere.rs
