[package]
name = "raytracer-weekend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
fastrand = "2.3.0"
fastrand-contrib = "0.1.0"
image = "0.25.6"
indicatif = "0.17.11"
rayon = "1.10.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = "fat"
