[package]
name = "raytracer-weekend"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25.6", default-features = false, features = [
    "png",
    "rayon",
] }
anyhow = "1.0.100"
fastrand = "2.3.0"
fastrand-contrib = "0.1.0"
indicatif = "0.18.0"
rayon = "1.11.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
